--- a/css/styles.css
+++ b/css/styles.css
@@ -1744,7 +1744,7 @@ nav ul li a.btn-primary:after {
 /* ===== FOOTER ===== */
 footer {
     background-color: var(--text-dark);
-    color: var(--white);
+    color: #000000;
     padding: var(--spacing-lg) 0 var(--spacing-md);
 }
 
@@ -1780,9 +1780,10 @@ footer {
 }
 
 .footer-links h4, .footer-contact h4 {
-    color: var(--white);
+    color: #000000;
     margin-bottom: var(--spacing-md);
     position: relative;
+    font-weight: 700;
 }
 
 .footer-links h4:after, .footer-contact h4:after {
@@ -1808,7 +1809,8 @@ footer {
 }
 
 .footer-links ul li a:hover {
-    color: var(--primary-light);
+    color: #333333;
+    text-decoration: underline;
 }
 
 .footer-contact p {
@@ -1818,7 +1820,7 @@ footer {
 
 .footer-contact p i {
     margin-right: var(--spacing-xs);
-    color: var(--primary-light);
+    color: #000000;
 }
 
 .footer-contact a {
@@ -1826,7 +1828,8 @@ footer {
 }
 
 .footer-contact a:hover {
-    color: var(--primary-light);
+    color: #333333;
+    text-decoration: underline;
 }
 
 .footer-bottom {
